<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.lalapetstudios.nanodegree.MainActivity">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar">

    </include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_below="@id/app_bar"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/header_text"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@id/app_bar"
            android:gravity="center"
            android:text="@string/my_nanodegree_apps"
            android:textColor="@color/text_color_black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/spotify_steamer_btn"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_below="@id/header_text"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/spotify_steamer"
            android:textColor="@color/text_color_black"
            android:onClick="showSnackBar"
            android:textSize="14sp" />

        <Button
            android:id="@+id/scores_app_btn"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_below="@id/spotify_steamer_btn"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/scores_app"
            android:textColor="@color/text_color_black"
            android:onClick="showSnackBar"
            android:textSize="14sp" />

        <Button
            android:id="@+id/library_app_btn"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_below="@id/scores_app_btn"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/library_app"
            android:textColor="@color/text_color_black"
            android:onClick="showSnackBar"
            android:textSize="14sp" />

        <Button
            android:id="@+id/builditbigger_app_btn"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_below="@id/library_app_btn"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/build_it_bigger"
            android:textColor="@color/text_color_black"
            android:onClick="showSnackBar"
            android:textSize="14sp" />

        <Button
            android:id="@+id/xyzreader_app_btn"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_below="@id/builditbigger_app_btn"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/xyz_reader"
            android:textColor="@color/text_color_black"
            android:onClick="showSnackBar"
            android:textSize="14sp" />

        <Button
            android:id="@+id/capstone_app_btn"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_below="@id/xyzreader_app_btn"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/capstone"
            android:textColor="@color/text_color_white"
            android:textSize="14sp"
            android:theme="@style/AppTheme.RedButton" />

    </LinearLayout>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/snackbarPosition">
    </android.support.design.widget.CoordinatorLayout>

</RelativeLayout>
